# airplanecoder

./: .gitignore  AIRPLANE.md  CLAUDE.md  Cargo.toml  LICENSE  bart-scribbles.md  fly  hello_world.html  index.html  openclaw-agentic-loop.md  openclaw.txt  package-lock.json  package.json  snake-game.html  tsconfig.json
src/: agent.rs  agent.ts  anthropic.rs  lib.rs  main.rs  ollama.rs  self_test.rs  settings.rs  types.rs  ui.tsx
src/llm/: ollama.ts
src/tools/: edit.rs  edit.ts  glob.rs  glob.ts  grep.rs  grep.ts  index.ts  mod.rs  read.rs  read.ts  shell.rs  shell.ts  write.rs  write.ts
src/tui/: mod.rs  widgets.rs
tests/: integration.rs
